# llvm-project

compiler-rt/: CMakeLists.txt
compiler-rt/lib/orc/: CMakeLists.txt  adt.h  common.h  compiler.h  cxa.h  dispatch.h  error.h  extensible_rtti.cpp  extensible_rtti.h  log_error_to_stderr.cpp  macho_platform.cpp  macho_platform.h  run_program_wrapper.cpp  stl_extras.h  wrapper_function_utils.cpp  wrapper_function_utils.h
llvm/: CMakeLists.txt
llvm/examples/Kaleidoscope/Chapter5/: toy.cpp
llvm/examples/Kaleidoscope/Chapter6/: toy.cpp
llvm/examples/Kaleidoscope/include/: KaleidoscopeJIT.h
llvm/examples/OrcV2Examples/: CMakeLists.txt
llvm/include/llvm-c/: Orc.h  OrcShared.h
llvm/lib/ExecutionEngine/JITLink/: CMakeLists.txt  CompactUnwindSupport.cpp  CompactUnwindSupportImpl.h  EHFrameSupport.cpp  EHFrameSupportImpl.h  ELF_aarch64.cpp  ELF_loongarch.cpp  ELF_x86_64.cpp  JITLinkGeneric.cpp  MachOLinkGraphBuilder.cpp  MachOLinkGraphBuilder.h  MachO_arm64.cpp  MachO_x86_64.cpp
llvm/lib/ExecutionEngine/Orc/: CMakeLists.txt  Core.cpp  LLJIT.cpp  MachOPlatform.cpp  Mangling.cpp  ObjectLinkingLayer.cpp  (+6 more)
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/tools/: CMakeLists.txt
llvm/tools/lli/: lli.cpp
llvm/tools/llvm-jitlink/: llvm-jitlink.cpp  llvm-jitlink.h
orc-rt/: CMakeLists.txt
orc-rt/include/orc-rt/: orc-rt.h
orc-rt/include/orc-rt-c/: extern-c.h  wrapper_function.h
orc-rt/lib/: CMakeLists.txt  common.h  orc-rt.cpp  wrapper_function_utils.h
orc-rt/tools/: CMakeLists.txt
orc-rt/tools/orc-executor/: CMakeLists.txt  orc-executor.cpp
(+44 files in other folders)
